# Hala_widowiskowo_sportowa

./: CMakeLists.txt  RAPORT.md  README.md  main.cpp  tests.cpp
include/: common.h  logger.h
src/: kasjer.cpp  kibic.cpp  kibic_vip.cpp  kierownik.cpp  log_server.cpp  pracownik_techniczny.cpp
tests/: test_czyszczenia_ipc.sh  test_czyszczenia_procesow.sh  test_spojnosci.sh  test_zombie.sh
tests/tests_src/: zombie.sh
